corpus/c/macro_include/case-13/snapshots/gcc13_14/single_sink_structured/render.debug.txt
error: [missing_name] ‘Box’ has no member named ‘missing_field’ @ src/main.c:9:12
name: Box
use : return READ_MISSING(box);
| src/main.c:9:12
|     return READ_MISSING(box);
|            ^
debug: rule_id=rule.family.scope_declaration.message_terms
debug: matched_conditions=message_contains=has no member named, phase=semantic
explain: repair_unit=repair-unit:node-sarif-0-0 proof=Unresolved visibility=NeverHidden
explain: member=node:sarif-0-0 target=DiagnosticNode { node_ref: "sarif-0-0" } unresolved=false
explain: raw_capture=diagnostics.sarif